last edits caused overlap, not noticed locally, but after heroku push-- added grid rows in attempt to fix placements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,11 +25,13 @@ h1 {
 
 p {
 	grid-column: 2/4;
+	grid-row: 2/3;
 	margin: 0 50px 0 50px;
 }
 
 form {
 	grid-column: 2/4;
+	grid-row: 3/4;
 	margin: 50px 0 50px 0;
 }
 
